
syntax = "proto3";

message Test {

	uint64 number = 1;

	string name = 2;

	repeated int64 id = 3;

}
